tests/e2e/not_allowed/none.error
Error: syntax error in story at line 1, column 1

1|    none = 1
      ^^^^

E0030: `none` is reserved for future use
